--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "google-spreadsheet": "^2.0.8",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.13",
